# BMP-6th-sem

./: .gitignore  CMakeLists.txt  Makefile  QUICKSTART.md  README.md  compact_arrays.cpp  geometry.conf  plot.py  report.md  test  testing.py
ResultsComparison/IntegratedQuantities/data_case1_vki/: conservation_checks_case_0_run_3  conservation_checks_case_0_run_4  conservation_checks_case_0_run_8  conservation_checks_case_0_run_9
ResultsComparison/IntegratedQuantities/data_case2_vki/: conservation_checks_case_0_run_1  conservation_checks_case_0_run_3  conservation_checks_case_0_run_7
ResultsComparison/IntegratedQuantities/data_case3a_vki/: conservation_checks_case_0_run_1  conservation_checks_case_0_run_5  conservation_checks_case_0_run_8  conservation_checks_case_0_run_9
SYCL-PIC-poissonsolver/: Analysis.ipynb  Manya_Vansh_BMP.md  average.ipynb  test.cpp  time.txt  trajectory_test.py
SYCL-PIC-poissonsolver/examples/: generate_input.py
SYCL-PIC-poissonsolver/include/: point.hpp  poissonSolver.hpp  species_ds.hpp  types.hpp
SYCL-PIC-poissonsolver/scripts/: diagnose_sign.py
SYCL-PIC-poissonsolver/src/: mover.cpp  predict_poisson_full.py  predict_poisson_ml.py  types.cpp  utils.cpp  verify_arrays.py
SYCL-PIC-poissonsolver/validation_dumps/: iter0000_phi_ml.npy  iter0000_rho_input.npy  iter0000_rho_input.txt  iter0001_phi_cpp.npy  iter0001_phi_cpp.txt  iter0001_phi_ml.txt  iter0001_rho_input.npy  iter0001_rho_input.txt  iter0002_phi_cpp.npy  iter0002_phi_ml.npy  iter0002_phi_ml.txt  iter0003_phi_cpp.npy  iter0003_phi_ml.npy  iter0003_rho_input.txt  iter0004_phi_cpp.npy  iter0004_phi_cpp.txt  iter0004_phi_ml.npy  iter0004_phi_ml.txt  iter0004_rho_input.npy
include/: interpolation.hpp  mover.hpp  particles.hpp  sycl_hashmap.hpp  utils.hpp
integration_methods/: BENCHMARK_REPORT.md  COMPREHENSIVE_BENCHMARK_REPORT.md  INTEGRATION_METHODS_REPORT.md  benchmark_all.py  benchmark_all_methods.py  benchmark_rl_methods.py  build_all.sh
integration_methods/method10_numba/: matmul_numba.py
integration_methods/method11_triton/: matmul_triton.py
integration_methods/method1_pybind11/: CMakeLists.txt  matmul_pybind.cpp
integration_methods/method2_cython/: matmul_cython.pyx  setup.py
integration_methods/method3_dlpack/: CMakeLists.txt  matmul_dlpack.cpp
integration_methods/method4_cuda_interface/: CMakeLists.txt  matmul_cuda_interface.cpp
integration_methods/method5_gymnasium/: matmul_gymnasium.py
integration_methods/method6_envpool/: matmul_envpool.py
integration_methods/method7_brax_jax/: matmul_jax.py
integration_methods/method8_dm_control/: matmul_dm_control.py
integration_methods/method9_isaac_lab/: matmul_isaac_lab.py
scripts/: eval_all_checkpoints.py  modify_phi.py  run.py
src/: interpolation.cpp  launcher.cpp  main.cpp  main.py  particles.cpp  poissonSolver.cpp  poisson_ml_bridge.py  sycl_pic_ctypes.cpp  sycl_pic_module.cpp
sycl_shared_memory_benchmark_rtx_6000/: README.md  REPORT_sycl_shared_memory.md  benchmark.py  build_core.sh  build_wrappers.sh  cython_sycl.cpp  cython_sycl.pyx  plot_results.py  setup_cython.py
sycl_shared_memory_benchmark_rtx_6000/src/: dlpack_sycl.cpp  numpy_c_api_sycl.cpp  pybind11_sycl.cpp  sycl_shared_core.cpp  sycl_shared_core.h
validation_dumps/: iter0000_phi_cpp.npy  iter0000_phi_cpp.txt  iter0000_phi_ml.txt  iter0001_phi_ml.npy  iter0002_phi_cpp.txt  iter0002_rho_input.npy  iter0002_rho_input.txt  iter0003_phi_cpp.txt  iter0003_phi_ml.txt  iter0003_rho_input.npy  iter0004_rho_input.txt
(+61 files in other folders)
